--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>CF Project Port</title>
+    <link rel="stylesheet" type="text/css" href="Final.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,600,700" rel="stylesheet"> 
+</head>
+    
+<body>
+    <header>
+    <h2 id="up">CF Project Port</h2>
+    <div>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="resume.html">RESUME</a></li>
+            <li><a href="portfolio.html">PORTFOLIO</a></li>
+            <li><a href="mywork.html">MY WORK</a></li>
+            <li><a href="current.html">CURRENT</a></li>
+            <li><a href="videos.html">VIDEOS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </div>
+    </header><br>
+    <h1 id="my">CYNTHIA</h1><h1 id="work">FENG</h1><br>
+    <div id="bod">
+    <div id="box1">
+        <img id="img1" src="imgs/mob_1378487%20copy.png" alt="link">
+        <h3 id="o1">MOBILE APP</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt velit venenatis, semper diam non, consectetur velit. Duis eget urna justo.</p>
+    </div>
+    <div id="box2">
+        <img id="img2" src="imgs/pc-icon-png-1%20copy.png" alt="light">
+        <h3 id="o2">WEB DESIGN</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt velit venenatis, semper diam non, consectetur velit. Duis eget urna justo.</p>
+    </div>
+    <div id="box3">
+        <img id="img3" src="imgs/Responsive_Design-512%20copy.png" alt="meter">
+        <h3 id="o3">RESPONSIVE DESIGN</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt velit venenatis, semper diam non, consectetur velit. Duis eget urna justo.</p>
+    </div>
+    </div>
+    <footer id="foot">
+        <div>
+        <ul>
+            <li><a href="privacy.html">PRIVACY POLICY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+        </ul>
+    </div>
+    </footer>
+</body>
+</html>
