--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     </label>
   </span>
 
-  <button id="send-button" type="button">Send</button>
+  <button id="send-button" type="button" onclick="sent()">Send</button>
 
 </div>
         
